--- a/deployments/test/docker-compose.yml
+++ b/deployments/test/docker-compose.yml
@@ -2,17 +2,16 @@ version: '3.7'
 
 services:
   api:
-    image: airnote_dev
+    image: airnote_test
     build:
       context: ../../
-      dockerfile: ./deployments/development/api/Dockerfile
-    ports:
-      - '8080:8080'
-    volumes:
-      - ../../:/airnote
+      dockerfile: ./deployments/test/api/Dockerfile
     depends_on:
       - db
+    volumes:
+      - ../../:/airnote
     environment:
+      MYSQL_TESTDBNAME: airnote
       MYSQL_DBNAME: airnote
       MYSQL_USER: airnote
       MYSQL_PASS: airnote
@@ -28,10 +27,4 @@ services:
       MYSQL_PASSWORD: airnote
       MYSQL_ROOT_PASSWORD: airnote
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
-    volumes:
-      - db-data:/var/lib/mysql
-    ports:
-      - '3306:3306'
-volumes:
-  db-data:
-    driver: local
+    
