--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
+    "react-transition-group": "^4.2.2",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.2.2",
     "@types/styled-components": "^4.1.18"
   }
 }
