--- a/app/package.json
+++ b/app/package.json
@@ -13,13 +13,21 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.4",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "install": "^0.13.0",
     "next": "13.4.19",
+    "npm": "^10.8.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.12",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-transition-group": "^4.4.11"
   }
 }
