--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,8 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/react-transition-group": "^4.4.11"
+    "@svgr/webpack": "^8.1.0",
+    "@types/react-transition-group": "^4.4.11",
+    "@types/styled-components": "^5.1.34"
   }
 }
